portfolio 1.0v ( projeto final )

--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -1,62 +1,232 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <script src="https://kit.fontawesome.com/ec64caddaa.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERUDION</title>
+    <title>Portfolio 1.0v</title>
+   <script src="https://kit.fontawesome.com/ec64caddaa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="shortcut icon" href="faficon.io/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="logo"><img width="250" src="logo/DOUBTNUT.png"></div>
-                <div class="menu">
-                    <nav>
-                        <a target="_blank" href="#">Home</a>
-                        <a target="_blank" href="#">About</a>
-                        <a target="_blank" href="#">Courses</a>
-                        <a target="_blank" href="#">Pages</a>
-                        <a target="_blank" href="#">Blog</a>
-                        <a target="_blank" href="#">Contact</a>
-                    </nav>
-                </div>
-
-                <button onclick="animar()" id="btn-menu">
-                    <span class="linha"></span>
-                    <span class="linha"></span>
-                    <span class="linha"></span>
-                </button>
-
-                <div id="menu-mobile" class="menu-mobile">
-                    <nav>
-                        <a target="_blank" href="#">Home</a>
-                        <a target="_blank" href="#">About</a>
-                        <a target="_blank" href="#">Courses</a>
-                        <a target="_blank" href="#">Pages</a>
-                        <a target="_blank" href="#">Blog</a>
-                        <a target="_blank" href="#">Contact</a>
-                    </nav>
-                </div>
-
-                <div class="sociais">
-                    <button><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></button>
-                    <button><a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></button>
-                    <button><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></button>
-                </div>
+            <div class="logo">
+                <h1><strong> Jefesron </strong> Silva </h1>
+            </div>
+            <div class="menu-desktop">
+                <nav>
+                    <a href="#">HOME</a>
+                    <a href="#">ABOUT</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">RESUME</a>
+                    <a href="#">PORTFOLIO</a>
+                    <a href="#">PRICING</a>
+                    <a href="#">BLOG</a>
+                    <a href="#">CONTACT</a>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
-        <div class="container-main">
-            <section class="container-conteudo">
-               <div class="caixa-amarela"></div>
-               <h1>Education is the key to unlock the golden door of freedom</h1>
-               <button><p></p></button>
-            </section>
+        <section id="container-sessao01">
+            <div class="conteudo-sessao01">
+                <h1>Hi There I'm</h1>
+                <h2>Desenvolvedor</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem magnam tempore tenetur aut, rerum nulla, quae repellat architecto sit, commodi quidem maiores obcaecati aliquid aliquam quo in? Fugit, tenetur debitis.</p>
+
+                <button id="btn-label"> <a href="#">Download CV</a> </button>
+            </div>
+            <div id="img-sessao01"><img width="350" src="img/foto01.png"></div>
+        </section>
+
+        <section id="container-sessao02">
+            <div class="ABOUT">
+                <h1>About Me</h1>
+                <p>Professional Profile - there is All Abount Me</p>
+                <h2>....</h2>
+            </div>
+
+            <div class="conteiner-about">
+                <div class="img-about"> <img width="260" src="img/foto-perfil.jpg" ></div>
+                <div class="conteudo-about">
+                    <h1>I'm Jefesron Silva</h1>
+                    <h2>____</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, excepturi ex sapiente, quisquam tempore temporibus corporis ut porro quas perspiciatis inventore aliquid nihil soluta ab eos minus quibusdam dolore iure.</p> <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloremque aliquid, voluptatem laboriosam error reiciendis, provident quod consequatur cupiditate iusto vero, inventore dolorum suscipit. Necessitatibus iste aut vitae eaque voluptas?</p>
+
+                    <nav class="nav-list-about"> 
+                        <ul>
+                            <div class="nav-01">
+                                <p> 📅 <strong>Date of birth:</strong> 21 june 1990</p>
+                                <p> 🌐<strong> Freelance:</strong> Available</p>
+                                <p> 📍 <strong>Address:</strong> Moscow,Russia</p>
+                                <p> 🌎 <strong>Spoken langages:</strong> french - german</p>
+                            </div>
+                            <div class="nav-02">
+                                <p> 🏳️ <strong> Nationalisty:</strong> Russian</p>
+                                <p> 📱 <strong>Phone:</strong>  +34 21 18 40 10</p>
+                                <p> ✉️ <strong>Email:</strong>you@yourwebsite.com</p>
+                                <p> 🖥️ <strong>Skype:</strong> jeferson.silva</p>
+                            </div>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </section>
+
+            <div class="conteudo-top-sessao03">
+                <h1>My Services</h1>
+                <p>Lorem ipsum dolor sit amet</p>
+                <h2>....</h2>
+            </div>
+
+        <section id="container-sessao03">
+            <div class="conteudo-services-01">
+                <i class="fa-solid fa-window-restore"></i>
+                <h1>Web desing</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+            <div class="conteudo-services-01">
+                <i class="fa-solid fa-laptop-code"></i>
+                <h1>Web Developer</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+            <div class="conteudo-services-01">
+                <i class="fa-solid fa-code-branch"></i>
+                <h1>Photography</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+            <div class="conteudo-services-01">
+                <i class="fa-regular fa-thumbs-up"></i>
+                <h1>SEO Analyst</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+            <div class="conteudo-services-01">
+                <i class="fa-solid fa-palette"></i>
+                <h1>Creative Desing</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+            <div class="conteudo-services-01">
+                <i class="fa-regular fa-user"></i>
+                <h1>24 X 7 Support</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
+            </div>
+        </section>
+
+        <div class="conteudo-top-sessao04">
+            <h1>My Resume</h1>
+            <p>Lorem ipsum dolor sit, amet </p>
+            <h2>....</h2>
         </div>
+
+        <section id="conteiner-sessao04">
+            <div class="conteiner-resume-sessao04">
+                <div class="conteudo-01">
+                    <h1><i class="fa-solid fa-book"></i> EXPERIENCE</h1>
+                    <div class="conteudo-bloco-01">
+                        <h1> 2010 - Present</h1>
+                        <h2>WordPress Developer - themeforest</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dignissimos deleniti, sed vel architecto Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nemo minus.</p>
+                    </div>
+                </div>
+                <div class="conteudo-01">
+                    <h1> <i class="fa-solid fa-mug-hot"></i> EDUCATION</h1>
+                    <div class="conteudo-bloco-01">
+                        <h1> 2004 - 2009</h1>
+                        <h2>Bachalor - Universily</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit dignissimos deleniti, sed vel architecto Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nemo minus.</p>
+                    </div>
+                </div>
+                <div class="conteudo-01">
+                    <h1> ☆ MY SKILLOS</h1>
+                    <div class="conteudo-bloco-02">
+                       <ul>
+                        <h1>HTML 5</h1>
+                        <p>☆☆☆☆☆</p>
+                        <h1>PHP</h1>
+                        <p>☆☆☆☆☆</p>
+                        <h1>JavaScript</h1>
+                        <p>☆☆☆☆☆</p>
+                        <h1>CSS 3</h1>
+                        <p>☆☆☆☆☆</p>
+                        <h1>WordPress</h1>
+                        <p>☆☆☆☆☆</p>
+                        <h1>j-Query</h1>
+                        <p>☆☆☆☆☆</p>
+                       </ul>
+                    </div>
+                </div>
+                <!--conteudo da fun facts da sessão 04-->
+                <div class="conteudo-01">
+                    <h1> <i class="fa-regular fa-heart"></i> FUN FACTS</h1>
+                    <div class="conteudo-bloco-03">
+                        <h1> <i class="fa-regular fa-user"></i> 112</h1>
+                        <p>Happy Clients</p>
+                    </div>
+                    <div class="conteudo-bloco-03">
+                       <h1> <i class="fa-solid fa-award"></i> 26</h1>
+                       <p>Awards Achieved</p>
+                    </div>
+                    <div class="conteudo-bloco-03">
+                        <h1> <i class="fa-regular fa-star"></i> 24</h1>
+                        <p>Projects Done</p>
+                    </div>
+                    <div class="conteudo-bloco-03">
+                        <h1> <i class="fa-solid fa-chalkboard-user"></i> 120</h1>
+                        <p>User Rattings</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <script src="sistema-interatividade.js"></script>
+    <footer>
+        <section id="container-sessao04">
+           <div class="conteudo-footer-01">
+                <h1>Join WebCorpCo to receive updates, news & events!</h1>
+                <h2>_________________________________</h2>
+                <input type="search" name="pesquisar" id="pesquisarid" placeholder="Enter you Email " width="100">
+                <input id="button-join" type="button" value="Join">
+           </div>
+           <div class="conteudo-footer-02">
+               <h1>Learn More</h1>
+               <a href="#" target="_blank">Company</a>
+               <a href="#" target="_blank">Clients</a>
+               <a href="#" target="_blank">News</a>
+               <a href="#" target="_blank">Carecrs</a>
+           </div>
+           <div class="conteudo-footer-02">
+               <h1>Services</h1>
+               <a href="#" target="_blank">Desing</a>
+               <a href="#" target="_blank">Marketing</a>
+               <a href="#" target="_blank">Sdalers</a>
+               <a href="#" target="_blank">Support</a>
+           </div>
+           <div class="conteudo-footer-02">
+               <h1>The Industry</h1>
+               <a href="#" target="_blank">Thought leadership</a>
+               <a href="#" target="_blank">webinars</a>
+               <a href="#" target="_blank">Events</a>
+               <a href="#" target="_blank">Sponsorships</a>
+           </div>
+           <div class="conteudo-footer-02">
+               <h1>Public Relations</h1>
+               <a href="#" target="_blank">WebcorpCo Blog</a>
+               <a href="#" target="_blank">Videos</a>
+               <a href="#" target="_blank">News projects</a>
+               <a href="#" target="_blank">Newssletters</a>
+           </div>
+           <div class="conteudo-footer-02">
+               <h1>About</h1>
+               <a href="#" target="_blank">FaQ</a>
+               <a href="#" target="_blank">Our Board</a>
+               <a href="#" target="_blank">Our Staff</a>
+               <a href="#" target="_blank">Our Centact Us</a>
+           </div>
+        </section>
+        <section id="redes sociais">
+            <div></div>
+        </section>
+    </footer>
 </body>
 </html>
