Portfolio 1.5v (menu-animação)

--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio 1.0v</title>
-   <script src="https://kit.fontawesome.com/ec64caddaa.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ec64caddaa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/animaçao.css">
     <link rel="stylesheet" href="estilos/media_query_mobile.css">
     <link rel="stylesheet" href="estilos/media_query_tablet.css">
     <link rel="stylesheet" href="estilos/media_query_desktop.css">
@@ -250,5 +251,6 @@
             <div></div>
         </section>
     </footer>
+    <script src="sistema/interativida.js"></script>
 </body>
 </html>
