--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio 1.0v</title>
-    <script src="https://kit.fontawesome.com/ec64caddaa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/animaçao.css">
     <link rel="stylesheet" href="estilos/media_query_mobile.css">
     <link rel="stylesheet" href="estilos/media_query_tablet.css">
     <link rel="stylesheet" href="estilos/media_query_desktop.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
@@ -47,9 +47,13 @@
                     <a href="#">PRICING</a>
                     <a href="#">BLOG</a>
                     <a href="#">CONTACT</a>
+                    <ul id="redes_sociais">
+                        <a href="#" target="_blank"><img width="40" src="icon/icon-facebook01.png"></a>
+                        <a href="#" target="_blank"><img width="45" src="icon/icon-instagram01.png"></a>
+                        <a href="#" target="_blank"><img width="46" src="icon/icon-twitter01.png"></a>
+                    </ul>
                 </nav>
             </div>
-
         </div>
     </header>
     <main>
@@ -107,32 +111,32 @@
 
         <section id="container-sessao03">
             <div class="conteudo-services-01">
-                <i class="fa-solid fa-window-restore"></i>
+                <i class="material-symbols-outlined">design_services</i>
                 <h1>Web desing</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
             <div class="conteudo-services-01">
-                <i class="fa-solid fa-laptop-code"></i>
+                <i class="material-symbols-outlined">branding_watermark </i>
                 <h1>Web Developer</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
             <div class="conteudo-services-01">
-                <i class="fa-solid fa-code-branch"></i>
+                <i class="material-symbols-outlined">linear_scale</i>
                 <h1>Photography</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
             <div class="conteudo-services-01">
-                <i class="fa-regular fa-thumbs-up"></i>
+                <i class="material-symbols-outlined">travel_explore</i>
                 <h1>SEO Analyst</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
             <div class="conteudo-services-01">
-                <i class="fa-solid fa-palette"></i>
+                <i class="material-symbols-outlined">web</i>
                 <h1>Creative Desing</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
             <div class="conteudo-services-01">
-                <i class="fa-regular fa-user"></i>
+                <i class="material-symbols-outlined">language</i>
                 <h1>24 X 7 Support</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia et vitae odit. Doloribus pariatur possimus, magnam cumque dolor ex repellendus </p>
             </div>
@@ -147,7 +151,7 @@
         <section id="conteiner-sessao04">
             <div class="conteiner-resume-sessao04">
                 <div class="conteudo-01">
-                    <h1><i class="fa-solid fa-book"></i> EXPERIENCE</h1>
+                    <h1><i class="material-symbols-outlined">laptop_mac</i> EXPERIENCE</h1>
                     <div class="conteudo-bloco-01">
                         <h1> 2010 - Present</h1>
                         <h2>WordPress Developer - themeforest</h2>
@@ -155,7 +159,7 @@
                     </div>
                 </div>
                 <div class="conteudo-01">
-                    <h1> <i class="fa-solid fa-mug-hot"></i> EDUCATION</h1>
+                    <h1> <i class="material-symbols-outlined">co_present</i> EDUCATION</h1>
                     <div class="conteudo-bloco-01">
                         <h1> 2004 - 2009</h1>
                         <h2>Bachalor - Universily</h2>
@@ -163,7 +167,7 @@
                     </div>
                 </div>
                 <div class="conteudo-01">
-                    <h1> ☆ MY SKILLOS</h1>
+                    <h1> ☆ MY SKILLS</h1>
                     <div class="conteudo-bloco-02">
                        <ul>
                         <h1>HTML 5</h1>
@@ -183,21 +187,21 @@
                 </div>
                 <!--conteudo da fun facts da sessão 04-->
                 <div class="conteudo-01">
-                    <h1> <i class="fa-regular fa-heart"></i> FUN FACTS</h1>
+                    <h1> <i class="material-symbols-outlined">devices</i> FUN FACTS</h1>
                     <div class="conteudo-bloco-03">
-                        <h1> <i class="fa-regular fa-user"></i> 112</h1>
+                        <h1> <i class="material-symbols-outlined">background_replace</i> 112</h1>
                         <p>Happy Clients</p>
                     </div>
                     <div class="conteudo-bloco-03">
-                       <h1> <i class="fa-solid fa-award"></i> 26</h1>
+                       <h1> <i class="material-symbols-outlined">smart_button</i> 26</h1>
                        <p>Awards Achieved</p>
                     </div>
                     <div class="conteudo-bloco-03">
-                        <h1> <i class="fa-regular fa-star"></i> 24</h1>
+                        <h1> <i class="material-symbols-outlined">important_devices</i> 24</h1>
                         <p>Projects Done</p>
                     </div>
                     <div class="conteudo-bloco-03">
-                        <h1> <i class="fa-solid fa-chalkboard-user"></i> 120</h1>
+                        <h1> <i class="material-symbols-outlined">display_settings</i> 120</h1>
                         <p>User Rattings</p>
                     </div>
                 </div>
