--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/styleAnimaçao.css">
     <link rel="stylesheet" href="estilos/styleWebprincipal.css">
+    <link rel="stylesheet" href="estilos/styleTablet.css">
     <link rel="stylesheet" href="estilos/styleMobile.css">
 </head>
 <body>
