adcionando (carrosel-sem-automação) + ( correção de bugs das fotos) )

--- a/pagina-principal/index.html
+++ b/pagina-principal/index.html
@@ -128,6 +128,61 @@
 
     </header>
 
+    <main>
+
+        <div class="slider">
+
+            <div class="slides">
+
+                <!--radio buttons-->
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <!--Fim radio buttons-->
+
+                <!--slider-imgs-->
+
+                <div class="slide-first">
+
+                    <!--container (caixa) do primeiro slide-->
+                    <div class="container-item-slide">
+
+                        <h1>ACAMP 2023 \\ inverno</h1>
+
+                        <a href="#">O que ACAMP?</a>
+                        <strong><a href="#">Inscrição ACAMP</a></strong>
+
+                    </div>
+
+                    <img class="img-container imagem" src="img-capa/carrosel-navbar/pexels-lukas-1309584.jpg">
+                </div>
+
+                <div class="slide">
+                    <img class="img-container imagem" src="img-capa/capa-dos-cultos.jpg">
+                </div>
+
+                 <!--Fim slider-imgs-->
+
+                 <!--navegation-auto-->
+                 <div class="navegation-auto">
+
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+
+                 </div>
+                 
+            </div>
+
+            <div class="manual-navegation">
+
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+
+            </div>
+
+        </div>
+
+    </main>
+
     <script src="sistema js/interatividade.js"></script>
 </body>
 </html>
